objects/USA_Latest_Survey_Response__c.object
<CustomObject>
    <description>The latest Survey Responses will be managed in this Object</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Latest Survey Responses</relationshipLabel>
        <relationshipName>Latest_Survey_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Briefcase_Survey__c</fullName>
        <label>Briefcase Survey</label>
        <referenceTo>USA_Survey__c</referenceTo>
        <relationshipLabel>Latest Survey Responses</relationshipLabel>
        <relationshipName>Latest_Survey_Responses</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_Response__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Response</label>
        <referenceTo>USA_Survey_Response__c</referenceTo>
        <relationshipLabel>Latest Survey Responses</relationshipLabel>
        <relationshipName>Latest_Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Latest Survey Response</label>
    <nameField>
        <displayFormat>LSR-{0000}</displayFormat>
        <label>Latest Survey Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Latest Survey Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>